--- a/Inmobiliaria_Vistas/Views/inmueble/comisiones.html
+++ b/Inmobiliaria_Vistas/Views/inmueble/comisiones.html
@@ -68,7 +68,7 @@
                                 <td class="text-XX18">{{x[0]}}</td>
                                 <td class="text-left">{{x[1]}}</td>
                                 <td class="text-left">{{x[2]}}</td>
-                                <td class="text-left">{{x[3]}}</td>
+                                <td class="text-left">{{Formato_Dinero(x[3])}}</td>
                             </tr>                            
                         </tbody>
                     </table>
