--- a/Inmobiliaria_Vistas/Views/inmueble/nuestros_inmuebles.html
+++ b/Inmobiliaria_Vistas/Views/inmueble/nuestros_inmuebles.html
@@ -85,7 +85,7 @@
                   <div class="modal-body">
                     <form ng-submit="ActualizarInmueble()">
                         <div class="row text-center">
-                            <img src="{{Registro.foto.imagen}}" class="m-auto" alt="">
+                            <img src="{{Registro.foto.imagen}}" class="m-auto" alt="" style="max-width: 600px;">
                         </div>
                         <div class="row">
                             <div class="col-md-12 col-lg-12 col-sm-12">						
